fix ticket visibility

--- a/hwk05/styles.css
+++ b/hwk05/styles.css
@@ -320,10 +320,6 @@ object {
     .body {
         overflow-y: scroll;
     }
-
-    .ticket {
-        visibility: visible;
-    }
 }
 
 /* tablet */
@@ -367,10 +363,6 @@ object {
 
     .body {
         overflow-y: hidden;
-    }
-
-    .ticket {
-        visibility: visible;
     }
 }
 
@@ -478,7 +470,7 @@ object {
         position: absolute;
         left: 62%;
         top: 62%;
-        transition: all ease-in-out;
+        transition: all 0.5s ease-in-out;
         visibility: hidden;
     }
 
